--- a/CMRxRecon.html
+++ b/CMRxRecon.html
@@ -55,7 +55,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="CMRxRecon.html">CMRxRecon</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Task</a><div class="u-nav-popup"><ul class="u-nav u-unstyled u-v-spacing-13"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task/Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task/Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="TTask2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
 </li></ul>
 </div>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Data-and-Submission.html">Data and Submission</a>
