--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<title>Home</title>
+	<title>CMRxRecon</title>
 	<link rel="stylesheet" href="nicepage.css" media="screen">
 	<link rel="stylesheet" href="Home.css" media="screen">
 	<script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -69,35 +69,39 @@
 							<div class="u-nav-popup">
 								<ul class="u-nav u-unstyled u-v-spacing-13">
 									<li class="u-nav-item"><a class="u-button-style u-nav-link"
-											href="Task/Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
+											href="Task1-Cine-reconstruction.html">Task1:Cine reconstruction</a>
 									</li>
 									<li class="u-nav-item"><a class="u-button-style u-nav-link"
-											href="Task/Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
+											href="Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
 									</li>
 								</ul>
 							</div>
 						</li>
 						<li class="u-nav-item"><a
+								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+								href="Data.html" style="padding: 10px 20px;">Data</a>
+						</li>
+						<li class="u-nav-item"><a
 							class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-							href="#" style="padding: 10px 20px;">Data</a>
+							href="#" style="padding: 10px 20px;">Submission</a>
 						<div class="u-nav-popup">
 							<ul class="u-nav u-unstyled u-v-spacing-13">
 								<li class="u-nav-item"><a class="u-button-style u-nav-link"
-										href="Data/Data.html">Data</a>
+										href="STACOM-workshop-paper.html">STACOM-workshop-paper</a>
 								</li>
 								<li class="u-nav-item"><a class="u-button-style u-nav-link"
-										href="Data/Submission.html">Submission</a>
+										href="Challenge-Submission.html">Challenge-Submission</a>
 								</li>
 							</ul>
 						</div>
 					</li>
 						<li class="u-nav-item"><a
 								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-								href="Organizers.html" style="padding: 10px 20px;">Organizers</a>
+								href="Organizer.html" style="padding: 10px 20px;">Organizer</a>
 						</li>
 						<li class="u-nav-item"><a
 								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-								href="Sponsors.html" style="padding: 10px 20px;">Sponsors</a>
+								href="Sponsor.html" style="padding: 10px 20px;">Sponsor</a>
 						</li>
 					</ul>
 				</div>
@@ -112,23 +116,22 @@
 									<div class="u-nav-popup">
 										<ul class="u-nav u-unstyled u-v-spacing-13">
 											<li class="u-nav-item"><a class="u-button-style u-nav-link"
-													href="Task/Task1-Cine-reconstruction.html">Task1 Cine
+													href="Task/Task1-Cine-reconstruction.html">Task1:Cine
 													reconstruction</a>
 											</li>
 											<li class="u-nav-item"><a class="u-button-style u-nav-link"
-													href="Task/Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
+													href="Task/Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
 											</li>
 										</ul>
 									</div>
 								</li>
-								<li class="u-nav-item"><a class="u-button-style u-nav-link"
-										href="Data-and-Submission.html">Data and Submission</a>
+								<li class="u-nav-item"><a class="u-button-style u-nav-link" href="Data.html">Data</a>
 								</li>
 								<li class="u-nav-item"><a class="u-button-style u-nav-link"
-										href="Organizers.html">Organizers</a>
+										href="Organizer.html">Organizer</a>
 								</li>
 								<li class="u-nav-item"><a class="u-button-style u-nav-link"
-										href="Sponsors.html">Sponsors</a>
+										href="Sponsor.html">Sponsor</a>
 								</li>
 							</ul>
 						</div>
@@ -959,6 +962,9 @@
 	<section class="u-clearfix u-section-4" id="sec-8e5c">
 		<div class="u-clearfix u-sheet u-sheet-1">
 			<h3 class="u-text u-text-default u-text-palette-2-base u-text-1">CMR aquisition design</h3>
+			<img class="u-image u-image-contain u-image-default u-image-1" src="images/2023-04-141.01.18.png" alt=""
+				data-image-width="2324" data-image-height="1220">
+			<p class="u-text u-text-default u-text-palette-2-base u-text-2">这是2022年挑战赛的，供参考</p>
 		</div>
 	</section>
 	<section class="u-clearfix u-section-5" id="sec-c47f">
@@ -1077,120 +1083,13 @@
 					-->
 				</style>
 			</p>
-			<ul class="u-align-justify u-text u-text-grey-75 u-text-3">
-				<li>Task 1:&nbsp;</li>
-				<li>
-					<!--EndFragment-->
-					<style>
-						<!--
-						/* Font Definitions */
-						@font-face {
-							font-family: "Cambria Math";
-							panose-1: 2 4 5 3 5 4 6 3 2 4;
-							mso-font-charset: 0;
-							mso-generic-font-family: roman;
-							mso-font-pitch: variable;
-							mso-font-signature: -536870145 1107305727 0 0 415 0;
-						}
-
-						@font-face {
-							font-family: DengXian;
-							panose-1: 2 1 6 0 3 1 1 1 1 1;
-							mso-font-alt: 等线;
-							mso-font-charset: 134;
-							mso-generic-font-family: auto;
-							mso-font-pitch: variable;
-							mso-font-signature: -1610612033 953122042 22 0 262159 0;
-						}
-
-						@font-face {
-							font-family: Calibri;
-							panose-1: 2 15 5 2 2 2 4 3 2 4;
-							mso-font-charset: 0;
-							mso-generic-font-family: swiss;
-							mso-font-pitch: variable;
-							mso-font-signature: -536859905 -1073732485 9 0 511 0;
-						}
-
-						@font-face {
-							font-family: "\@等线";
-							panose-1: 2 1 6 0 3 1 1 1 1 1;
-							mso-font-alt: "\@DengXian";
-							mso-font-charset: 134;
-							mso-generic-font-family: auto;
-							mso-font-pitch: variable;
-							mso-font-signature: -1610612033 953122042 22 0 262159 0;
-						}
-
-						/* Style Definitions */
-						p.MsoNormal,
-						li.MsoNormal,
-						div.MsoNormal {
-							mso-style-unhide: no;
-							mso-style-parent: "";
-							margin-top: 3.0pt;
-							margin-right: 0cm;
-							margin-bottom: 3.0pt;
-							margin-left: 0cm;
-							line-height: 130%;
-							mso-pagination: none;
-							layout-grid-mode: char;
-							font-size: 11.0pt;
-							font-family: DengXian;
-							mso-ascii-font-family: DengXian;
-							mso-ascii-theme-font: minor-latin;
-							mso-fareast-font-family: DengXian;
-							mso-fareast-theme-font: minor-fareast;
-							mso-hansi-font-family: DengXian;
-							mso-hansi-theme-font: minor-latin;
-							mso-bidi-font-family: "Times New Roman";
-							mso-bidi-theme-font: minor-bidi;
-							color: #333333;
-							mso-font-kerning: 1.0pt;
-						}
-
-						.MsoChpDefault {
-							mso-style-type: export-only;
-							mso-default-props: yes;
-							font-size: 11.0pt;
-							mso-ansi-font-size: 11.0pt;
-							mso-bidi-font-size: 11.0pt;
-							font-family: DengXian;
-							mso-bidi-font-family: "Times New Roman";
-							mso-bidi-theme-font: minor-bidi;
-							color: #333333;
-						}
-
-						.MsoPapDefault {
-							mso-style-type: export-only;
-							margin-top: 3.0pt;
-							margin-right: 0cm;
-							margin-bottom: 3.0pt;
-							margin-left: 0cm;
-							line-height: 130%;
-							layout-grid-mode: char;
-						}
-
-						/* Page Definitions */
-						@page {
-							mso-page-border-surround-header: no;
-							mso-page-border-surround-footer: no;
-						}
-
-						@page WordSection1 {
-							size: 612.0pt 792.0pt;
-							margin: 72.0pt 90.0pt 72.0pt 90.0pt;
-							mso-header-margin: 36.0pt;
-							mso-footer-margin: 36.0pt;
-							mso-paper-source: 0;
-						}
-
-						div.WordSection1 {
-							page: WordSection1;
-						}
-						-->
-					</style>
-				</li>
+			<ul class="u-align-justify u-text u-text-grey-60 u-text-3">
+				<li>Task1: provide a benchmark platform to advance existing cine CMR reconstruction approaches for
+					accelerated cine MRI, which can address limitations and reduce image degradation due to motions
+					caused by voluntary breath-holds or cardiac arrhythmia.</li>
+				<li> Task2: provide a benchmark platform for multi-contrast CMR images with different acceleration
+					factors to address the failure of conventional T1 and T2 mapping estimation models in the face of
+					highly under-sampled images.</li>
 			</ul>
 			<p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-4">Top 3 winners of each task receive
 				monetary awards: 1st place $500, 2nd $ place $200, 3rd place $100.
@@ -1765,7 +1664,7 @@
 				alt="" data-image-width="200" data-image-height="200">
 			<img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2"
 				src="images/twitter.png" alt="" data-image-width="200" data-image-height="200">
-			<a href="https://nicepage.com/wordpress-website-builder"
+			<a href="https://twitter.com/CMRxRecon"
 				class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-2">CMRxRecon</a>
 		</div>
 	</footer>
