--- a/Challenge-Submission.html
+++ b/Challenge-Submission.html
@@ -116,11 +116,11 @@
 									<div class="u-nav-popup">
 										<ul class="u-nav u-unstyled u-v-spacing-13">
 											<li class="u-nav-item"><a class="u-button-style u-nav-link"
-													href="Task/Task1-Cine-reconstruction.html">Task1:Cine
+													href="Task1-Cine-reconstruction.html">Task1:Cine
 													reconstruction</a>
 											</li>
 											<li class="u-nav-item"><a class="u-button-style u-nav-link"
-													href="Task/Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
+													href="Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
 											</li>
 										</ul>
 									</div>
