--- a/STACOM-workshop-paper.html
+++ b/STACOM-workshop-paper.html
@@ -69,10 +69,10 @@
 							<div class="u-nav-popup">
 								<ul class="u-nav u-unstyled u-v-spacing-13">
 									<li class="u-nav-item"><a class="u-button-style u-nav-link"
-											href="Task1-Cine-reconstruction.html">Task1:Cine reconstruction</a>
+											href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
 									</li>
 									<li class="u-nav-item"><a class="u-button-style u-nav-link"
-											href="Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
+											href="Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
 									</li>
 								</ul>
 							</div>
@@ -81,20 +81,6 @@
 								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
 								href="Data.html" style="padding: 10px 20px;">Data</a>
 						</li>
-						<li class="u-nav-item"><a
-							class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-							href="#" style="padding: 10px 20px;">Submission</a>
-						<div class="u-nav-popup">
-							<ul class="u-nav u-unstyled u-v-spacing-13">
-								<li class="u-nav-item"><a class="u-button-style u-nav-link"
-										href="STACOM-workshop-paper.html">STACOM-workshop-paper</a>
-								</li>
-								<li class="u-nav-item"><a class="u-button-style u-nav-link"
-										href="Challenge-Submission.html">Challenge-Submission</a>
-								</li>
-							</ul>
-						</div>
-					</li>
 						<li class="u-nav-item"><a
 								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
 								href="Organizer.html" style="padding: 10px 20px;">Organizer</a>
@@ -116,11 +102,10 @@
 									<div class="u-nav-popup">
 										<ul class="u-nav u-unstyled u-v-spacing-13">
 											<li class="u-nav-item"><a class="u-button-style u-nav-link"
-													href="Task/Task1-Cine-reconstruction.html">Task1:Cine
-													reconstruction</a>
+													href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
 											</li>
 											<li class="u-nav-item"><a class="u-button-style u-nav-link"
-													href="Task/Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
+													href="Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
 											</li>
 										</ul>
 									</div>
@@ -176,20 +161,11 @@
   </section>
 
 
-  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e835">
-		<div class="u-clearfix u-sheet u-sheet-1">
-			<p class="u-align-left u-text u-text-default u-text-1">Contact us:<br>
-			</p>
-			<a href="mailto:CMRxRecon@outlook.com"
-				class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-top-left-radius-0 u-top-right-radius-0 u-btn-1">CMRxRecon@outlook.com</a>
-			<img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/1.png"
-				alt="" data-image-width="200" data-image-height="200">
-			<img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2"
-				src="images/twitter.png" alt="" data-image-width="200" data-image-height="200">
-			<a href="https://twitter.com/CMRxRecon"
-				class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-2">CMRxRecon</a>
-		</div>
-	</footer>
+  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e4ef">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the Text Element.</p>
+    </div>
+  </footer>
   <section class="u-backlink u-clearfix u-grey-80">
     <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
       <span>Website Templates</span>
