--- a/Organizer.html
+++ b/Organizer.html
@@ -274,7 +274,7 @@
       <p class="u-text u-text-grey-60 u-text-1">
         <span style="font-weight: 700;">Department of Computing, Xiamen University, China</span>
         <br>
-        <br>Xiaobo Qu, Shanshan Wang, Guang Yang
+        <br>Xiaobo Qu
       </p>
     </div>
   </section>
