--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 							<div class="u-nav-popup">
 								<ul class="u-nav u-unstyled u-v-spacing-13">
 									<li class="u-nav-item"><a class="u-button-style u-nav-link"
-											href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
+											href="Task1-Cine-reconstruction.html">Task1: Cine reconstruction</a>
 									</li>
 									<li class="u-nav-item"><a class="u-button-style u-nav-link"
-											href="Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
+											href="Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
 									</li>
 								</ul>
 							</div>
@@ -81,6 +81,20 @@
 								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
 								href="Data.html" style="padding: 10px 20px;">Data</a>
 						</li>
+						<li class="u-nav-item"><a
+							class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+							href="#" style="padding: 10px 20px;">Submission</a>
+						<div class="u-nav-popup">
+							<ul class="u-nav u-unstyled u-v-spacing-13">
+								<li class="u-nav-item"><a class="u-button-style u-nav-link"
+										href="STACOM-workshop-paper.html">STACOM workshop paper</a>
+								</li>
+								<li class="u-nav-item"><a class="u-button-style u-nav-link"
+										href="Challenge-Submission.html">Challenge submission</a>
+								</li>
+							</ul>
+						</div>
+					</li>
 						<li class="u-nav-item"><a
 								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
 								href="Organizer.html" style="padding: 10px 20px;">Organizer</a>
