--- a/Challenge-Submission.html
+++ b/Challenge-Submission.html
@@ -197,11 +197,20 @@
   </section>
 
 
-  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e4ef">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the Text Element.</p>
-    </div>
-  </footer>
+  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e835">
+		<div class="u-clearfix u-sheet u-sheet-1">
+			<p class="u-align-left u-text u-text-default u-text-1">Contact us:<br>
+			</p>
+			<a href="mailto:CMRxRecon@outlook.com"
+				class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-top-left-radius-0 u-top-right-radius-0 u-btn-1">CMRxRecon@outlook.com</a>
+			<img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/1.png"
+				alt="" data-image-width="200" data-image-height="200">
+			<img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2"
+				src="images/twitter.png" alt="" data-image-width="200" data-image-height="200">
+			<a href="https://twitter.com/CMRxRecon"
+				class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-2">CMRxRecon</a>
+		</div>
+	</footer>
   <section class="u-backlink u-clearfix u-grey-80">
     <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
       <span>Website Templates</span>
