--- a/Organizer.html
+++ b/Organizer.html
@@ -45,92 +45,108 @@
 
 <body class="u-body u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="sec-2bff">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <nav class="u-align-center u-menu u-menu-dropdown u-offcanvas u-menu-1">
-        <div class="menu-collapse u-custom-font u-font-arial"
-          style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
-          <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-            href="#">
-            <svg class="u-svg-link" viewBox="0 0 24 24">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
-            </svg>
-            <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
-              xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
-              <g>
-                <rect y="1" width="16" height="2"></rect>
-                <rect y="7" width="16" height="2"></rect>
-                <rect y="13" width="16" height="2"></rect>
-              </g>
-            </svg>
-          </a>
-        </div>
-        <div class="u-custom-menu u-nav-container">
-          <ul class="u-custom-font u-font-arial u-nav u-spacing-2 u-unstyled u-nav-1">
-            <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-                href="Home.html" style="padding: 10px 20px;">Home</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-                href="#" style="padding: 10px 20px;">Task</a>
-              <div class="u-nav-popup">
-                <ul class="u-nav u-unstyled u-v-spacing-13">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                      href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
-                  </li>
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task2-T1-T2-mapping.html">Task2 T1
-                      T2 mapping</a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-                href="Data.html" style="padding: 10px 20px;">Data</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-                href="Organizer.html" style="padding: 10px 20px;">Organizer</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
-                href="Sponsor.html" style="padding: 10px 20px;">Sponsor</a>
-            </li>
-          </ul>
-        </div>
-        <div class="u-custom-menu u-nav-container-collapse">
-          <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-            <div class="u-inner-container-layout u-sidenav-overflow">
-              <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Task</a>
-                  <div class="u-nav-popup">
-                    <ul class="u-nav u-unstyled u-v-spacing-13">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                          href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task2-T1-T2-mapping.html">Task2
-                          T1 T2 mapping</a>
-                      </li>
-                    </ul>
-                  </div>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Data.html">Data</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Organizer.html">Organizer</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Sponsor.html">Sponsor</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-        </div>
-      </nav>
-    </div>
-  </header>
+		<div class="u-clearfix u-sheet u-sheet-1">
+			<nav class="u-align-center u-menu u-menu-dropdown u-offcanvas u-menu-1">
+				<div class="menu-collapse u-custom-font u-font-arial"
+					style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
+					<a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+						href="#">
+						<svg class="u-svg-link" viewBox="0 0 24 24">
+							<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
+						</svg>
+						<svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
+							xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+							<g>
+								<rect y="1" width="16" height="2"></rect>
+								<rect y="7" width="16" height="2"></rect>
+								<rect y="13" width="16" height="2"></rect>
+							</g>
+						</svg>
+					</a>
+				</div>
+				<div class="u-custom-menu u-nav-container">
+					<ul class="u-custom-font u-font-arial u-nav u-spacing-2 u-unstyled u-nav-1">
+						<li class="u-nav-item"><a
+								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+								href="Home.html" style="padding: 10px 20px;">Home</a>
+						</li>
+						<li class="u-nav-item"><a
+								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+								href="#" style="padding: 10px 20px;">Task</a>
+							<div class="u-nav-popup">
+								<ul class="u-nav u-unstyled u-v-spacing-13">
+									<li class="u-nav-item"><a class="u-button-style u-nav-link"
+											href="Task1-Cine-reconstruction.html">Task1: Cine reconstruction</a>
+									</li>
+									<li class="u-nav-item"><a class="u-button-style u-nav-link"
+											href="Task2-T1-T2-mapping.html">Task2: T1/T2 mapping</a>
+									</li>
+								</ul>
+							</div>
+						</li>
+						<li class="u-nav-item"><a
+								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+								href="Data.html" style="padding: 10px 20px;">Data</a>
+						</li>
+						<li class="u-nav-item"><a
+							class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+							href="#" style="padding: 10px 20px;">Submission</a>
+						<div class="u-nav-popup">
+							<ul class="u-nav u-unstyled u-v-spacing-13">
+								<li class="u-nav-item"><a class="u-button-style u-nav-link"
+										href="STACOM-workshop-paper.html">STACOM workshop paper</a>
+								</li>
+								<li class="u-nav-item"><a class="u-button-style u-nav-link"
+										href="Challenge-Submission.html">Challenge submission</a>
+								</li>
+							</ul>
+						</div>
+					</li>
+						<li class="u-nav-item"><a
+								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+								href="Organizer.html" style="padding: 10px 20px;">Organizer</a>
+						</li>
+						<li class="u-nav-item"><a
+								class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90"
+								href="Sponsor.html" style="padding: 10px 20px;">Sponsor</a>
+						</li>
+					</ul>
+				</div>
+				<div class="u-custom-menu u-nav-container-collapse">
+					<div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+						<div class="u-inner-container-layout u-sidenav-overflow">
+							<div class="u-menu-close"></div>
+							<ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3">
+								<li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
+								</li>
+								<li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Task</a>
+									<div class="u-nav-popup">
+										<ul class="u-nav u-unstyled u-v-spacing-13">
+											<li class="u-nav-item"><a class="u-button-style u-nav-link"
+													href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
+											</li>
+											<li class="u-nav-item"><a class="u-button-style u-nav-link"
+													href="Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
+											</li>
+										</ul>
+									</div>
+								</li>
+								<li class="u-nav-item"><a class="u-button-style u-nav-link" href="Data.html">Data</a>
+								</li>
+								<li class="u-nav-item"><a class="u-button-style u-nav-link"
+										href="Organizer.html">Organizer</a>
+								</li>
+								<li class="u-nav-item"><a class="u-button-style u-nav-link"
+										href="Sponsor.html">Sponsor</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+				</div>
+			</nav>
+		</div>
+	</header>
   <section class="u-clearfix u-section-1" id="sec-04b6">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <img class="u-image u-image-contain u-image-default u-image-1" src="images/cmrlogo.jpeg" alt=""
