--- a/Home.html
+++ b/Home.html
@@ -71,7 +71,7 @@
 											href="Task1-Cine-reconstruction.html">Task1:Cine reconstruction</a>
 									</li>
 									<li class="u-nav-item"><a class="u-button-style u-nav-link"
-											href="Task2-T1-T2-mapping.html">Task2:T1/T2 mapping</a>
+											href="Task2-T1-T2-mapping.html">Task2:T1T/2 mapping</a>
 									</li>
 								</ul>
 							</div>
@@ -104,7 +104,7 @@
 													href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
 											</li>
 											<li class="u-nav-item"><a class="u-button-style u-nav-link"
-													href="Task2-T1-T2-mapping.html">Task2:T1/T2 mapping</a>
+													href="Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
 											</li>
 										</ul>
 									</div>
@@ -955,8 +955,6 @@
 	</section>
 	<section class="u-clearfix u-section-4" id="sec-8e5c">
 		<div class="u-clearfix u-sheet u-sheet-1">
-			<img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/2023-04-272.04.09.png"
-				alt="" data-image-width="2316" data-image-height="1308">
 			<h3 class="u-text u-text-default u-text-1">CMR aquisition design</h3>
 			<p class="u-align-justify u-custom-font u-font-arial u-text u-text-grey-60 u-text-2">
 				<span style="font-weight: 700;">Scanner:</span> Siemens 3T MRI scanner (MAGNETOM Vida).&nbsp;<br>
@@ -1943,9 +1941,9 @@
 					-->
 				</style>
 			</p>
-			<img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/2023-04-273.48.38.png"
+			<img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/2023-04-273.48.38.png"
 				alt="" data-image-width="2136" data-image-height="706">
-			<img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/2023-04-273.49.26.png"
+			<img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/2023-04-273.49.26.png"
 				alt="" data-image-width="2138" data-image-height="926">
 		</div>
 	</section>
