--- a/Q-and-A.html
+++ b/Q-and-A.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <title>CMRxRecon</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
-  <link rel="stylesheet" href="Sponsor.css" media="screen">
+  <link rel="stylesheet" href="Q-andA.css" media="screen">
   <link rel="icon" type="image/svg+xml" href="images/cmrlogo.jpeg" />
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
@@ -26,12 +26,12 @@
     }
   </script>
   <meta name="theme-color" content="#478ac9">
-  <meta property="og:title" content="Sponsor">
+  <meta property="og:title" content="Home">
   <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
 
-<body class="u-body u-xl-mode" data-lang="en">
+<body class="u-body u-white u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="sec-2bff">
     <div class="u-clearfix u-sheet u-sheet-1">
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -127,21 +127,55 @@
         alt="" data-image-width="768" data-image-height="333">
     </div>
   </header>
-  <section class="u-clearfix u-section-1" id="sec-95e9">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <p class="u-text u-text-default u-text-grey-60 u-text-1">The challenge is sponsored by&nbsp;Simens Healthineers
-        Ltd., China​&nbsp;</p>
-      <img class="u-image u-image-contain u-image-default u-image-1" src="images/simens.png" alt=""
-        data-image-width="450" data-image-height="112">
-      <p class="u-text u-text-default u-text-grey-60 u-text-2">The following information is provided by the sponsor. No
-        guarantee is provided by the organizers.</p>
+  <section class="u-clearfix u-white u-section-1" id="sec-d793">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <img class="u-image u-image-default u-image-1"
+        src="images/ChengyanWang_A_doctor_is_scanning_a_patients_heart_with_magneti_755c25a4-e053-497d-a765-8dccc352e379.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <img class="u-image u-image-default u-image-2"
+        src="images/ChengyanWang_ECG_cardiac_imaging_running_human_network_deep_lea_0b712dd9-3856-4433-9eb7-1c5949bacb37.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <img class="u-image u-image-default u-image-3"
+        src="images/ChengyanWang_ultra_fast_cardiac_imaging_mri_scanner_computer_hi_d5f86a3e-006c-42b8-8000-1bf11cd4337c.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <p class="u-text u-text-default u-text-grey-60 u-text-1">Images provided by midjourney </p>
     </div>
   </section>
-  <section class="u-clearfix u-section-2" id="sec-bdc8">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <img
-        class="u-absolute-hcenter u-expanded-height u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
-        src="images/20230424_AD-1.png" alt="" data-image-width="2100" data-image-height="6000">
+  <section class="u-clearfix u-section-2" id="sec-74da">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <h3 class="u-text u-text-default u-text-1">Q&amp;A:&nbsp;</h3>
+      <p class="u-text u-text-default u-text-2"> Q: What is the estimated time for approval of participation request
+        after sending the signed challenge rule?<br>
+        <span class="u-text-palette-1-base">A: If the signed challenge rule document is filled out correctly, the
+          participation request will be approved within 2-4 working days.</span>
+        <br>
+        <br>Q: Is it possible to download the challenge dataset without participating in the challenge?&nbsp;<br>
+        <span class="u-text-palette-1-base">A: No, the dataset is only available to participants during the challenge to
+          ensure enough submissions.</span>
+        <br>
+        <br>Q: What is the maximum number of team members allowed?&nbsp;<br>
+        <span class="u-text-palette-1-base">A: Each team can consist of up to 6 people. The authors in the submitted
+          paper should be the same as the team member list.</span>
+        <br>
+        <br>Q: Can other datasets or pre-trained models be used to develop the segmentation algorithms?&nbsp;<br>
+        <span class="u-text-palette-1-base">A: No, only the challenge dataset is allowed for developing the segmentation
+          algorithms.</span>
+        <br>
+        <br>Q: Is manual annotation of unlabeled images allowed to increase the training set?&nbsp;<br>
+        <span class="u-text-palette-1-base">A: No, any manual interventions are not allowed, including manual annotation
+          of unlabeled images.</span>
+        <br>
+        <br>Q: Can high-quality pseudo labels for the unlabeled images be manually selected?&nbsp;<br>
+        <span class="u-text-palette-1-base">A: No, any manual interventions are not allowed, including manual selection
+          of high-quality pseudo labels for unlabeled images.</span>
+        <br>
+        <br>Q: Does the validation submission affect the final ranking?&nbsp;<br>
+        <span class="u-text-palette-1-base">A: No, the validation submission does not affect the final ranking.</span>
+        <br>
+        <br>Q: Can modifications be made to the methods and the paper during the testing phase?&nbsp;<br>
+        <span class="u-text-palette-1-base">A: Yes, modifications can be made before the testing submission, but not
+          after.</span>
+      </p>
     </div>
   </section>
 
