--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-font-arial u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-5 u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Home.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-5 u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="#" style="padding: 10px 20px;">Task</a><div class="u-nav-popup"><ul class="u-nav u-unstyled u-v-spacing-13 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
+            <ul class="u-custom-font u-font-arial u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Home.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="#" style="padding: 10px 20px;">Task</a><div class="u-nav-popup"><ul class="u-nav u-unstyled u-v-spacing-13 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task2-T1-T2-mapping.html">Task2 T1 T2 mapping</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-5 u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Challenge.html" style="padding: 10px 20px;">Join the Challenge!</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-5 u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Organizer.html" style="padding: 10px 20px;">Organizer</a>
-</li><li class="u-nav-item"><a class="u-active-custom-color-5 u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Sponsor.html" style="padding: 10px 20px;">Sponsor</a>
+</li><li class="u-nav-item"><a class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Challenge.html" style="padding: 10px 20px;">Join the Challenge!</a>
+</li><li class="u-nav-item"><a class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Organizer.html" style="padding: 10px 20px;">Organizer</a>
+</li><li class="u-nav-item"><a class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white" href="Sponsor.html" style="padding: 10px 20px;">Sponsor</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -1927,8 +1927,11 @@ div.WordSection1
     </section>
     <section class="u-clearfix u-section-8" id="sec-9dd5">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-text u-text-default u-text-1">Contact</h3>
-        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">To contact us by email, send to <span style="text-decoration: underline !important;">
+        <h3 class="u-text u-text-default u-text-1">Organizers<br>
+        </h3>
+        <img class="u-image u-image-contain u-image-default u-image-1" src="images/2023-04-115.12.331.png" alt="" data-image-width="2628" data-image-height="972">
+        <h3 class="u-text u-text-default u-text-2">Contact</h3>
+        <p class="u-text u-text-default u-text-grey-60 u-text-3">To contact us by email, send to <span style="text-decoration: underline !important;">
             <a href="mailto:CMRxRecon@outlook.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-60 u-btn-1">CMRxRecon@outlook.com</a>
           </span>.<!--EndFragment-->
           <style> <!--
@@ -2018,14 +2021,11 @@ div.WordSection1
 	{page:WordSection1;}
 --> </style>
         </p>
-        <h3 class="u-text u-text-default u-text-3">Organizers<br>
-        </h3>
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/2023-04-115.12.331.png" alt="" data-image-width="2628" data-image-height="972">
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-custom-color-6 u-footer u-footer" id="sec-e835"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-25 u-footer" id="sec-e835"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/FDU-removebg-preview1.png" alt="" data-image-width="274" data-image-height="262">
         <p class="u-align-left u-text u-text-default u-text-1">Contact us:<br>
         </p>
