--- a/Organizer.html
+++ b/Organizer.html
@@ -165,12 +165,12 @@
       <p class="u-text u-text-grey-60 u-text-1">
         <span style="font-weight: 700;">Human Phenome Institute, Fudan University, China</span>
         <br>
-        <br>Chengyan Wang, Xinyu Zhang, Xutong Kuang<br>
+        <br><span style="color:#e57f3f">Chengyan Wang</span>&nbsp;(Event leader),<span style="color:#e57f3f">Xinyu Zhang</span> &nbsp;(Primary coordinator), Xutong Kuang<br>
         <br>
         <span style="font-weight: 700;">Digital Medical Research Center, School of Basic Medical Sciences, Fudan
           University, China</span>
         <br>
-        <br>Shuo Wang<br>
+        <br><span style="color:#e57f3f">Shuo Wang</span>&nbsp(QC manager)<br>
         <br>
         <span style="font-weight: 700;">Institue of Science and Technology for Brain-inspired Intellegence, Fudan
           University, China</span>
@@ -321,7 +321,7 @@
       <p class="u-text u-text-grey-60 u-text-1">
         <span style="font-weight: 700;">Department of Computing, Xiamen University, China</span>
         <br>
-        <br>Xiaobo Qu, Shanshan Wang, Guang Yang
+        <br>Xiaobo Qu
       </p>
     </div>
   </section>
