--- a/STACOM-Paper.html
+++ b/STACOM-Paper.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <title>CMRxRecon</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
-  <link rel="stylesheet" href="Sponsor.css" media="screen">
+  <link rel="stylesheet" href="STACOM-Paper.css" media="screen">
   <link rel="icon" type="image/svg+xml" href="images/cmrlogo.jpeg" />
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
@@ -26,7 +26,7 @@
     }
   </script>
   <meta name="theme-color" content="#478ac9">
-  <meta property="og:title" content="Sponsor">
+  <meta property="og:title" content="Home">
   <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
@@ -152,21 +152,49 @@
         alt="" data-image-width="768" data-image-height="333">
     </div>
   </header>
-  <section class="u-clearfix u-section-1" id="sec-95e9">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <p class="u-text u-text-default u-text-grey-60 u-text-1">The challenge is sponsored by&nbsp;Simens Healthineers
-        Ltd., China​&nbsp;</p>
-      <img class="u-image u-image-contain u-image-default u-image-1" src="images/simens.png" alt=""
-        data-image-width="450" data-image-height="112">
-      <p class="u-text u-text-default u-text-grey-60 u-text-2">The following information is provided by the sponsor. No
-        guarantee is provided by the organizers.</p>
+  <section class="u-clearfix u-section-1" id="sec-d953">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <img class="u-image u-image-default u-image-1"
+        src="images/ChengyanWang_ECG_cardiac_imaging_running_human_network_deep_lea_0b712dd9-3856-4433-9eb7-1c5949bacb37.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <img class="u-image u-image-default u-image-2"
+        src="images/ChengyanWang_computer_screen_cardiac_imaging_speed_up_network_d_12b01039-8a90-4deb-a1ed-2e8266ffe5d7.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <img class="u-image u-image-default u-image-3"
+        src="images/ChengyanWang_A_doctor_is_scanning_a_patients_heart_with_magneti_755c25a4-e053-497d-a765-8dccc352e379.png"
+        alt="" data-image-width="1024" data-image-height="1024">
+      <p class="u-text u-text-default u-text-grey-60 u-text-1">Images provided by midjourney </p>
     </div>
   </section>
-  <section class="u-clearfix u-section-2" id="sec-bdc8">
+  <section class="u-clearfix u-section-2" id="sec-534d">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <img
-        class="u-absolute-hcenter u-expanded-height u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
-        src="images/20230424_AD-1.png" alt="" data-image-width="2100" data-image-height="6000">
+      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">STACOM workshop paper</h3>
+      <p class="u-align-justify u-text u-text-grey-60 u-text-2">Participants are invited to submit an <span
+          style="font-weight: 700;">8 pages</span> manuscript describing the algorithm and results of the training and
+        validation phase for consideration in the MICCAI STACOM workshop 2023. Accepted challenge papers will be
+        published in a Lecture Notes in Computer Science proceeding published by Springer.<br>General rules for the
+        paper submission:<br>
+      </p>
+      <ol class="u-align-justify u-custom-font u-font-arial u-text u-text-grey-60 u-text-3">
+        <li> Please Follow the&nbsp;<font face="'Open Sans',sans-serif">
+            <span style="font-size: 1.125rem;">
+              <a href="https://www.springer.com/us/computer-science/lncs/conference-proceedings-guidelines"
+                class="u-border-none u-btn u-button-link u-button-style u-none u-text-palette-2-base u-btn-1">LNCS
+                template</a>
+            </span>
+          </font>&nbsp;from Springer for your manuscript. Initial submission must be anonymized and<span
+            style="font-weight: 700;"> limited to 8 page</span>s (text, tables, and figures) + <span
+            style="font-weight: 700;">up to 2 pages for references<span style="font-weight: 400;">.</span>
+          </span>
+        </li>
+        <li>All papers will undergo a peer review process. Submit your paper through the Springer submission system and
+          make sure you choose the “CMRxRecon” category.</li>
+        <li>A paper placeholder must be submitted before <span style="font-weight: 700;">15 July 2023</span>.
+        </li>
+        <li>Please note that your manuscript will be <span style="font-weight: 700;">considered for publication only if
+            you successfully submit the docker container.</span>
+        </li>
+      </ol>
     </div>
   </section>
 
@@ -288,6 +316,7 @@
       </p>
     </div>
   </footer>
+
 
 </body>
 
